@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2017 IBM Corp and others.
+ * Copyright (c) 2009, 2018 IBM Corp and others.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -26,8 +26,10 @@ import java.util.Enumeration;
 import java.util.Hashtable;
 import java.util.Properties;
 import java.util.Vector;
+import java.util.concurrent.TimeUnit;
 
 import org.eclipse.paho.client.mqttv3.IMqttActionListener;
+import org.eclipse.paho.client.mqttv3.IMqttDeliveryToken;
 import org.eclipse.paho.client.mqttv3.MqttClientPersistence;
 import org.eclipse.paho.client.mqttv3.MqttDeliveryToken;
 import org.eclipse.paho.client.mqttv3.MqttException;
@@ -100,7 +102,7 @@ import org.eclipse.paho.client.mqttv3.logging.LoggerFactory;
  */
 public class ClientState {
 	private static final String CLASS_NAME = ClientState.class.getName();
-	private static final Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME);
+	private Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME);
 	private static final String PERSISTENCE_SENT_PREFIX = "s-";
 	private static final String PERSISTENCE_SENT_BUFFERED_PREFIX = "sb-";
 	private static final String PERSISTENCE_CONFIRMED_PREFIX = "sc-";
@@ -175,10 +177,14 @@ public class ClientState {
         pendingMessages = new Vector(this.maxInflight);
     }
     protected void setKeepAliveSecs(long keepAliveSecs) {
-		this.keepAlive = keepAliveSecs*1000;
+		this.keepAlive = TimeUnit.SECONDS.toNanos(keepAliveSecs);
 	}
+    /**
+     * Returns the keepAlive in Milliseconds
+     * @return The KeepAlive value in Milliseconds
+     */
 	protected long getKeepAlive() {
-		return this.keepAlive;
+		return TimeUnit.NANOSECONDS.toMillis(this.keepAlive);
 	}
 	protected void setCleanSession(boolean cleanSession) {
 		this.cleanSession = cleanSession;
@@ -189,6 +195,10 @@ public class ClientState {
 	
 	private String getSendPersistenceKey(MqttWireMessage message) {
 		return PERSISTENCE_SENT_PREFIX + message.getMessageId();
+	}
+	
+	private String getSendPersistenceKey(int messageId) {
+		return PERSISTENCE_SENT_PREFIX + messageId;
 	}
 	
 	private String getSendConfirmPersistenceKey(MqttWireMessage message) {
@@ -337,7 +347,7 @@ public class ClientState {
 					log.fine(CLASS_NAME,methodName,"604", new Object[]{key,message});
 
 					// The inbound messages that we have persisted will be QoS 2 
-					inboundQoS2.put(new Integer(message.getMessageId()),message);
+					inboundQoS2.put( Integer.valueOf(message.getMessageId()),message);
 				} else if (key.startsWith(PERSISTENCE_SENT_PREFIX)) {
 					MqttPublish sendMessage = (MqttPublish) message;
 					highestMsgId = Math.max(sendMessage.getMessageId(), highestMsgId);
@@ -352,7 +362,7 @@ public class ClientState {
 							//@TRACE 605=outbound QoS 2 pubrel key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "605", new Object[]{key,message});
 
-							outboundQoS2.put(new Integer(confirmMessage.getMessageId()), confirmMessage);
+							outboundQoS2.put( Integer.valueOf(confirmMessage.getMessageId()), confirmMessage);
 						} else {
 							//@TRACE 606=outbound QoS 2 completed key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "606", new Object[]{key,message});
@@ -365,17 +375,17 @@ public class ClientState {
 							//@TRACE 607=outbound QoS 2 publish key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "607", new Object[]{key,message});
 							
-							outboundQoS2.put(new Integer(sendMessage.getMessageId()),sendMessage);
+							outboundQoS2.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						} else {
 							//@TRACE 608=outbound QoS 1 publish key={0} message={1}
 							log.fine(CLASS_NAME,methodName, "608", new Object[]{key,message});
 
-							outboundQoS1.put(new Integer(sendMessage.getMessageId()),sendMessage);
+							outboundQoS1.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						}
 					}
 					MqttDeliveryToken tok = tokenStore.restoreToken(sendMessage);
 					tok.internalTok.setClient(clientComms.getClient());
-					inUseMsgIds.put(new Integer(sendMessage.getMessageId()),new Integer(sendMessage.getMessageId()));
+					inUseMsgIds.put( Integer.valueOf(sendMessage.getMessageId()), Integer.valueOf(sendMessage.getMessageId()));
 				} else if(key.startsWith(PERSISTENCE_SENT_BUFFERED_PREFIX)){
 					
 					// Buffered outgoing messages that have not yet been sent at all
@@ -384,17 +394,17 @@ public class ClientState {
 					if(sendMessage.getMessage().getQos() == 2){
 						//@TRACE 607=outbound QoS 2 publish key={0} message={1}
 						log.fine(CLASS_NAME,methodName, "607", new Object[]{key,message});
-						outboundQoS2.put(new Integer(sendMessage.getMessageId()),sendMessage);
+						outboundQoS2.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 					} else if(sendMessage.getMessage().getQos() == 1){
 						//@TRACE 608=outbound QoS 1 publish key={0} message={1}
 						log.fine(CLASS_NAME,methodName, "608", new Object[]{key,message});
 
-						outboundQoS1.put(new Integer(sendMessage.getMessageId()),sendMessage);
+						outboundQoS1.put( Integer.valueOf(sendMessage.getMessageId()),sendMessage);
 						
 					} else {
 						//@TRACE 511=outbound QoS 0 publish key={0} message={1}
 						log.fine(CLASS_NAME,methodName, "511", new Object[]{key,message});
-						outboundQoS0.put(new Integer(sendMessage.getMessageId()), sendMessage);
+						outboundQoS0.put( Integer.valueOf(sendMessage.getMessageId()), sendMessage);
 						// Because there is no Puback, we have to trust that this is enough to send the message
 						persistence.remove(key);
 						
@@ -402,7 +412,7 @@ public class ClientState {
 					
 					MqttDeliveryToken tok = tokenStore.restoreToken(sendMessage);
 					tok.internalTok.setClient(clientComms.getClient());
-					inUseMsgIds.put(new Integer(sendMessage.getMessageId()),new Integer(sendMessage.getMessageId()));
+					inUseMsgIds.put( Integer.valueOf(sendMessage.getMessageId()), Integer.valueOf(sendMessage.getMessageId()));
 					
 					
 				} else if (key.startsWith(PERSISTENCE_CONFIRMED_PREFIX)) {
@@ -497,7 +507,8 @@ public class ClientState {
 					message.setMessageId(getNextMessageId());
 				}
 		}
-		if (token != null ) {
+		if (token != null) {
+			message.setToken(token);
 			try {
 				token.internalTok.setMessageID(message.getMessageId());
 			} catch (Exception e) {
@@ -508,32 +519,33 @@ public class ClientState {
 			synchronized (queueLock) {
 				if (actualInFlight >= this.maxInflight) {
 					//@TRACE 613= sending {0} msgs at max inflight window
-					log.fine(CLASS_NAME, methodName, "613", new Object[]{new Integer(actualInFlight)});
+					log.fine(CLASS_NAME, methodName, "613", new Object[]{ Integer.valueOf(actualInFlight)});
 
 					throw new MqttException(MqttException.REASON_CODE_MAX_INFLIGHT);
 				}
 				
 				MqttMessage innerMessage = ((MqttPublish) message).getMessage();
 				//@TRACE 628=pending publish key={0} qos={1} message={2}
-				log.fine(CLASS_NAME,methodName,"628", new Object[]{new Integer(message.getMessageId()), new Integer(innerMessage.getQos()), message});
+				log.fine(CLASS_NAME,methodName,"628", new Object[]{ Integer.valueOf(message.getMessageId()),  Integer.valueOf(innerMessage.getQos()), message});
 
 				switch(innerMessage.getQos()) {
 					case 2:
-						outboundQoS2.put(new Integer(message.getMessageId()), message);
+						outboundQoS2.put( Integer.valueOf(message.getMessageId()), message);
 						persistence.put(getSendPersistenceKey(message), (MqttPublish) message);
+						tokenStore.saveToken(token, message);
 						break;
 					case 1:
-						outboundQoS1.put(new Integer(message.getMessageId()), message);
+						outboundQoS1.put( Integer.valueOf(message.getMessageId()), message);
 						persistence.put(getSendPersistenceKey(message), (MqttPublish) message);
+						tokenStore.saveToken(token, message);
 						break;
 				}
-				tokenStore.saveToken(token, message);
 				pendingMessages.addElement(message);
 				queueLock.notifyAll();
 			}
 		} else {
 			//@TRACE 615=pending send key={0} message {1}
-			log.fine(CLASS_NAME,methodName,"615", new Object[]{new Integer(message.getMessageId()), message});
+			log.fine(CLASS_NAME,methodName,"615", new Object[]{ Integer.valueOf(message.getMessageId()), message});
 			
 			if (message instanceof MqttConnect) {
 				synchronized (queueLock) {
@@ -548,7 +560,7 @@ public class ClientState {
 					this.pingCommand = message;
 				}
 				else if (message instanceof MqttPubRel) {
-					outboundQoS2.put(new Integer(message.getMessageId()), message);
+					outboundQoS2.put( Integer.valueOf(message.getMessageId()), message);
 					persistence.put(getSendConfirmPersistenceKey(message), (MqttPubRel) message);
 				}
 				else if (message instanceof MqttPubComp)  {
@@ -620,12 +632,12 @@ public class ClientState {
 		final String methodName = "undo";
 		synchronized (queueLock) {
 			//@TRACE 618=key={0} QoS={1} 
-			log.fine(CLASS_NAME,methodName,"618", new Object[]{new Integer(message.getMessageId()), new Integer(message.getMessage().getQos())});
+			log.fine(CLASS_NAME,methodName,"618", new Object[]{ Integer.valueOf(message.getMessageId()),  Integer.valueOf(message.getMessage().getQos())});
 			
 			if (message.getMessage().getQos() == 1) {
-				outboundQoS1.remove(new Integer(message.getMessageId()));
+				outboundQoS1.remove( Integer.valueOf(message.getMessageId()));
 			} else {
-				outboundQoS2.remove(new Integer(message.getMessageId()));
+				outboundQoS2.remove( Integer.valueOf(message.getMessageId()));
 			}
 			pendingMessages.removeElement(message);
 			persistence.remove(getSendPersistenceKey(message));
@@ -639,6 +651,39 @@ public class ClientState {
 
 			checkQuiesceLock();
 		}
+	}
+	
+	/**
+	 * This removes the MqttSend message from the outbound queue and persistence.
+	 * @param token The {@link IMqttDeliveryToken} for the message to remove
+	 * @return if the message is removed, then true, otherwise false
+	 * @throws MqttException if an exception occurs whilst removing the message
+	 */
+	protected boolean removeMessage(IMqttDeliveryToken token) throws MqttException {
+		final String methodName = "removeMessage";
+		MqttMessage message = token.getMessage();
+		int messageId = token.getMessageId();
+		boolean result = false;
+		synchronized (queueLock) {
+			if (message.getQos() == 1) {
+				if (outboundQoS1.remove( Integer.valueOf(messageId)) != null) {
+					result = true;
+				}
+			}
+			if (message.getQos() == 2) {
+				if (outboundQoS2.remove( Integer.valueOf(messageId)) != null) {
+					result = true;
+				}
+			}
+			if (pendingMessages.removeElement(message)) {
+				result = true;
+			}
+			persistence.remove(getSendPersistenceKey(messageId));
+			String key =  Integer.toString(messageId);
+			tokenStore.removeToken(key);
+			releaseMessageId(messageId);
+		}
+		return result;
 	}
 	
 	/**
@@ -670,13 +715,14 @@ public class ClientState {
         }
 
 		MqttToken token = null;
-		long nextPingTime = getKeepAlive();
+		long nextPingTime = this.keepAlive;
 		
 		if (connected && this.keepAlive > 0) {
-			long time = System.currentTimeMillis();
+			long time = System.nanoTime();
+			// Below might not be necessary since move to nanoTime (Issue #278)
 			//Reduce schedule frequency since System.currentTimeMillis is no accurate, add a buffer
 			//It is 1/10 in minimum keepalive unit.
-			int delta = 100;
+			int delta = 100000;
 			
 			// ref bug: https://bugs.eclipse.org/bugs/show_bug.cgi?id=446663
             synchronized (pingOutstandingLock) {
@@ -684,10 +730,11 @@ public class ClientState {
                 // Is the broker connection lost because the broker did not reply to my ping?                                                                                                                                 
                 if (pingOutstanding > 0 && (time - lastInboundActivity >= keepAlive + delta)) {
                     // lastInboundActivity will be updated once receiving is done.                                                                                                                                        
-                    // Add a delta, since the timer and System.currentTimeMillis() is not accurate.                                                                                                                        
+                    // Add a delta, since the timer and System.currentTimeMillis() is not accurate.     
+                		// TODO - Remove Delta, maybe?
                 	// A ping is outstanding but no packet has been received in KA so connection is deemed broken                                                                                                         
                     //@TRACE 619=Timed out as no activity, keepAlive={0} lastOutboundActivity={1} lastInboundActivity={2} time={3} lastPing={4}                                                                           
-                    log.severe(CLASS_NAME,methodName,"619", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity), new Long(time), new Long(lastPing)});
+                    log.severe(CLASS_NAME,methodName,"619", new Object[]{ Long.valueOf(this.keepAlive), Long.valueOf(lastOutboundActivity), Long.valueOf(lastInboundActivity),  Long.valueOf(time),  Long.valueOf(lastPing)});
 
                     // A ping has already been sent. At this point, assume that the                                                                                                                                       
                     // broker has hung and the TCP layer hasn't noticed.                                                                                                                                                  
@@ -698,7 +745,7 @@ public class ClientState {
                 if (pingOutstanding == 0 && (time - lastOutboundActivity >= 2*keepAlive)) {
                     
                     // I am probably blocked on a write operations as I should have been able to write at least a ping message                                                                                                    
-                	log.severe(CLASS_NAME,methodName,"642", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity), new Long(time), new Long(lastPing)});
+                	log.severe(CLASS_NAME,methodName,"642", new Object[]{ Long.valueOf(this.keepAlive), Long.valueOf(lastOutboundActivity), Long.valueOf(lastInboundActivity),  Long.valueOf(time),  Long.valueOf(lastPing)});
 
                     // A ping has not been sent but I am not progressing on the current write operation. 
                 	// At this point, assume that the broker has hung and the TCP layer hasn't noticed.                                                                                                                                                  
@@ -718,7 +765,7 @@ public class ClientState {
                     (time - lastOutboundActivity >= keepAlive - delta)) {
 
                     //@TRACE 620=ping needed. keepAlive={0} lastOutboundActivity={1} lastInboundActivity={2}                                                                                                              
-                    log.fine(CLASS_NAME,methodName,"620", new Object[]{new Long(this.keepAlive),new Long(lastOutboundActivity),new Long(lastInboundActivity)});
+                    log.fine(CLASS_NAME,methodName,"620", new Object[]{ Long.valueOf(this.keepAlive), Long.valueOf(lastOutboundActivity), Long.valueOf(lastInboundActivity)});
 
                     // pingOutstanding++;  // it will be set after the ping has been written on the wire                                                                                                             
                     // lastPing = time;    // it will be set after the ping has been written on the wire                                                                                                             
@@ -735,12 +782,13 @@ public class ClientState {
                     notifyQueueLock();
                 }
                 else {
+                		//@TRACE 634=ping not needed yet. Schedule next ping.
                     log.fine(CLASS_NAME, methodName, "634", null);
-                    nextPingTime = Math.max(1, getKeepAlive() - (time - lastOutboundActivity));
+                    nextPingTime = Math.max(1,  getKeepAlive() - (time - lastOutboundActivity));
                 }
             }
             //@TRACE 624=Schedule next ping at {0}                                                                                                                                                                                
-            log.fine(CLASS_NAME, methodName,"624", new Object[]{new Long(nextPingTime)});
+            log.fine(CLASS_NAME, methodName,"624", new Object[]{Long.valueOf(nextPingTime)});
             pingSender.schedule(nextPingTime);
 		}
 		
@@ -785,8 +833,8 @@ public class ClientState {
 				// Handle the case where not connected. This should only be the case if: 
 				// - in the process of disconnecting / shutting down
 				// - in the process of connecting
-				if (!connected && 
-						(pendingFlows.isEmpty() || !((MqttWireMessage)pendingFlows.elementAt(0) instanceof MqttConnect))) {
+				if (pendingFlows == null || (!connected && 
+						(pendingFlows.isEmpty() || !((MqttWireMessage)pendingFlows.elementAt(0) instanceof MqttConnect)))) {
 					//@TRACE 621=no outstanding flows and not connected
 					log.fine(CLASS_NAME,methodName,"621");
 					
@@ -807,7 +855,7 @@ public class ClientState {
 						inFlightPubRels++;
 
 						//@TRACE 617=+1 inflightpubrels={0}
-						log.fine(CLASS_NAME,methodName,"617", new Object[]{new Integer(inFlightPubRels)});
+						log.fine(CLASS_NAME,methodName,"617", new Object[]{ Integer.valueOf(inFlightPubRels)});
 					}
 		
 					checkQuiesceLock();
@@ -823,7 +871,7 @@ public class ClientState {
 						actualInFlight++;
 	
 						//@TRACE 623=+1 actualInFlight={0}
-						log.fine(CLASS_NAME,methodName,"623",new Object[]{new Integer(actualInFlight)});
+						log.fine(CLASS_NAME,methodName,"623",new Object[]{ Integer.valueOf(actualInFlight)});
 					} else {
 						//@TRACE 622=inflight window full
 						log.fine(CLASS_NAME,methodName,"622");				
@@ -841,11 +889,11 @@ public class ClientState {
     public void notifySentBytes(int sentBytesCount) {
         final String methodName = "notifySentBytes";
         if (sentBytesCount > 0) {
-        	this.lastOutboundActivity = System.currentTimeMillis();
+        	this.lastOutboundActivity = System.nanoTime();
         }
         // @TRACE 643=sent bytes count={0}                                                                                                                                                                                            
         log.fine(CLASS_NAME, methodName, "643", new Object[] {
-        		 new Integer(sentBytesCount) });
+        		  Integer.valueOf(sentBytesCount) });
     }
 
 	
@@ -856,21 +904,25 @@ public class ClientState {
 	protected void notifySent(MqttWireMessage message) {
 		final String methodName = "notifySent";
 		
-		this.lastOutboundActivity = System.currentTimeMillis();
+		this.lastOutboundActivity = System.nanoTime();
 		//@TRACE 625=key={0}
 		log.fine(CLASS_NAME,methodName,"625",new Object[]{message.getKey()});
 		
-		MqttToken token = tokenStore.getToken(message);
+		MqttToken token = message.getToken();
+		if (token == null) {
+			token = tokenStore.getToken(message);
+			if (token == null) return;
+		}
 		token.internalTok.notifySent();
         if (message instanceof MqttPingReq) {
             synchronized (pingOutstandingLock) {
-            	long time = System.currentTimeMillis();
+            	long time = System.nanoTime();
                 synchronized (pingOutstandingLock) {
                 	lastPing = time;
                 	pingOutstanding++;
                 }
                 //@TRACE 635=ping sent. pingOutstanding: {0}                                                                                                                                                                  
-                log.fine(CLASS_NAME,methodName,"635",new Object[]{ new Integer(pingOutstanding)});
+                log.fine(CLASS_NAME,methodName,"635",new Object[]{  Integer.valueOf(pingOutstanding)});
             }
         }
         else if (message instanceof MqttPublish) {
@@ -892,7 +944,7 @@ public class ClientState {
 		synchronized (queueLock) {
 			actualInFlight--;
 			//@TRACE 646=-1 actualInFlight={0}
-			log.fine(CLASS_NAME,methodName,"646",new Object[]{new Integer(actualInFlight)});
+			log.fine(CLASS_NAME,methodName,"646",new Object[]{ Integer.valueOf(actualInFlight)});
 			
 			if (!checkQuiesceLock()) {
 				queueLock.notifyAll();
@@ -906,7 +958,7 @@ public class ClientState {
 		int tokC = tokenStore.count();
 		if (quiescing && tokC == 0 && pendingFlows.size() == 0 && callback.isQuiesced()) {
 			//@TRACE 626=quiescing={0} actualInFlight={1} pendingFlows={2} inFlightPubRels={3} callbackQuiesce={4} tokens={5}
-			log.fine(CLASS_NAME,methodName,"626",new Object[]{new Boolean(quiescing), new Integer(actualInFlight), new Integer(pendingFlows.size()), new Integer(inFlightPubRels), Boolean.valueOf(callback.isQuiesced()), new Integer(tokC)});
+			log.fine(CLASS_NAME,methodName,"626",new Object[]{ Boolean.valueOf(quiescing),  Integer.valueOf(actualInFlight),  Integer.valueOf(pendingFlows.size()),  Integer.valueOf(inFlightPubRels), Boolean.valueOf(callback.isQuiesced()),  Integer.valueOf(tokC)});
 			synchronized (quiesceLock) {
 				quiesceLock.notifyAll();
 			}
@@ -918,11 +970,11 @@ public class ClientState {
     public void notifyReceivedBytes(int receivedBytesCount) {
         final String methodName = "notifyReceivedBytes";
         if (receivedBytesCount > 0) {
-            this.lastInboundActivity = System.currentTimeMillis();
+            this.lastInboundActivity = System.nanoTime();
         }
         // @TRACE 630=received bytes count={0}                                                                                                                                                                                        
         log.fine(CLASS_NAME, methodName, "630", new Object[] {
-                 new Integer(receivedBytesCount) });
+                  Integer.valueOf(receivedBytesCount) });
     }
 
     /**
@@ -933,11 +985,11 @@ public class ClientState {
 	 */
 	protected void notifyReceivedAck(MqttAck ack) throws MqttException {
 		final String methodName = "notifyReceivedAck";
-		this.lastInboundActivity = System.currentTimeMillis();
+		this.lastInboundActivity = System.nanoTime();
 
 		// @TRACE 627=received key={0} message={1}
 		log.fine(CLASS_NAME, methodName, "627", new Object[] {
-				new Integer(ack.getMessageId()), ack });
+				 Integer.valueOf(ack.getMessageId()), ack });
 
 		MqttToken token = tokenStore.getToken(ack);
 		MqttException mex = null;
@@ -945,7 +997,7 @@ public class ClientState {
 		if (token == null) {
 			// @TRACE 662=no message found for ack id={0}
 			log.fine(CLASS_NAME, methodName, "662", new Object[] {
-					new Integer(ack.getMessageId())});
+					 Integer.valueOf(ack.getMessageId())});
 		} else if (ack instanceof MqttPubRec) {
 			// Complete the QoS 2 flow. Unlike all other
 			// flows, QoS is a 2 phase flow. The second phase sends a
@@ -968,7 +1020,7 @@ public class ClientState {
                 }
             }
             //@TRACE 636=ping response received. pingOutstanding: {0}                                                                                                                                                     
-            log.fine(CLASS_NAME,methodName,"636",new Object[]{ new Integer(pingOutstanding)});
+            log.fine(CLASS_NAME,methodName,"636",new Object[]{  Integer.valueOf(pingOutstanding)});
 		} else if (ack instanceof MqttConnack) {
 			int rc = ((MqttConnack) ack).getReturnCode();
 			if (rc == 0) {
@@ -1015,11 +1067,11 @@ public class ClientState {
 	 */
 	protected void notifyReceivedMsg(MqttWireMessage message) throws MqttException {
 		final String methodName = "notifyReceivedMsg";
-		this.lastInboundActivity = System.currentTimeMillis();
+		this.lastInboundActivity = System.nanoTime();
 
 		// @TRACE 651=received key={0} message={1}
 		log.fine(CLASS_NAME, methodName, "651", new Object[] {
-				new Integer(message.getMessageId()), message });
+				 Integer.valueOf(message.getMessageId()), message });
 		
 		if (!quiescing) {
 			if (message instanceof MqttPublish) {
@@ -1034,7 +1086,7 @@ public class ClientState {
 				case 2:
 					persistence.put(getReceivedPersistenceKey(message),
 							(MqttPublish) message);
-					inboundQoS2.put(new Integer(send.getMessageId()), send);
+					inboundQoS2.put( Integer.valueOf(send.getMessageId()), send);
 					this.send(new MqttPubRec(send), null);
 					break;
 
@@ -1043,7 +1095,7 @@ public class ClientState {
 				}
 			} else if (message instanceof MqttPubRel) {
 				MqttPublish sendMsg = (MqttPublish) inboundQoS2
-						.get(new Integer(message.getMessageId()));
+						.get( Integer.valueOf(message.getMessageId()));
 				if (sendMsg != null) {
 					if (callback != null) {
 						callback.messageArrived(sendMsg);
@@ -1078,7 +1130,7 @@ public class ClientState {
 			
 			// @TRACE 629=received key={0} token={1} message={2}
 			log.fine(CLASS_NAME, methodName, "629", new Object[] {
-					 new Integer(message.getMessageId()), token, message });
+					  Integer.valueOf(message.getMessageId()), token, message });
 
 			MqttAck ack = (MqttAck) message;
 
@@ -1087,19 +1139,19 @@ public class ClientState {
 				// QoS 1 - user notified now remove from persistence...
 				persistence.remove(getSendPersistenceKey(message));
 				persistence.remove(getSendBufferedPersistenceKey(message));
-				outboundQoS1.remove(new Integer(ack.getMessageId()));
+				outboundQoS1.remove(Integer.valueOf(ack.getMessageId()));
 				decrementInFlight();
 				releaseMessageId(message.getMessageId());
 				tokenStore.removeToken(message);
 				// @TRACE 650=removed Qos 1 publish. key={0}
 				log.fine(CLASS_NAME, methodName, "650",
-						new Object[] { new Integer(ack.getMessageId()) });
+						new Object[] {  Integer.valueOf(ack.getMessageId()) });
 			} else if (ack instanceof MqttPubComp) {
 				// QoS 2 - user notified now remove from persistence...
 				persistence.remove(getSendPersistenceKey(message));
 				persistence.remove(getSendConfirmPersistenceKey(message));
 				persistence.remove(getSendBufferedPersistenceKey(message));
-				outboundQoS2.remove(new Integer(ack.getMessageId()));
+				outboundQoS2.remove( Integer.valueOf(ack.getMessageId()));
 
 				inFlightPubRels--;
 				decrementInFlight();
@@ -1108,8 +1160,8 @@ public class ClientState {
 
 				// @TRACE 645=removed QoS 2 publish/pubrel. key={0}, -1 inFlightPubRels={1}
 				log.fine(CLASS_NAME, methodName, "645", new Object[] {
-						new Integer(ack.getMessageId()),
-						new Integer(inFlightPubRels) });
+						 Integer.valueOf(ack.getMessageId()),
+						 Integer.valueOf(inFlightPubRels) });
 			}
 
 			checkQuiesceLock();
@@ -1227,7 +1279,7 @@ public class ClientState {
 	 * @param msgId A message ID that can be freed up for re-use.
 	 */
 	private synchronized void releaseMessageId(int msgId) {
-		inUseMsgIds.remove(new Integer(msgId));
+		inUseMsgIds.remove( Integer.valueOf(msgId));
 	}
 
 	/**
@@ -1252,8 +1304,8 @@ public class ClientState {
 	        		throw ExceptionHelper.createMqttException(MqttException.REASON_CODE_NO_MESSAGE_IDS_AVAILABLE);
 	        	}
 	        }
-	    } while( inUseMsgIds.containsKey( new Integer(nextMsgId) ) );
-	    Integer id = new Integer(nextMsgId);
+	    } while( inUseMsgIds.containsKey(  Integer.valueOf(nextMsgId) ) );
+	    Integer id =  Integer.valueOf(nextMsgId);
 	    inUseMsgIds.put(id, id);
 	    return nextMsgId;
 	}
@@ -1270,7 +1322,7 @@ public class ClientState {
 		// If the timeout is greater than zero t
 		if (timeout > 0 ) {
 			//@TRACE 637=timeout={0}
-			log.fine(CLASS_NAME,methodName, "637",new Object[]{new Long(timeout)});
+			log.fine(CLASS_NAME,methodName, "637",new Object[]{ Long.valueOf(timeout)});
 			synchronized (queueLock) {
 				this.quiescing = true;
 			}
@@ -1286,7 +1338,7 @@ public class ClientState {
 					int tokc = tokenStore.count();
 					if (tokc > 0 || pendingFlows.size() >0 || !callback.isQuiesced()) {
 						//@TRACE 639=wait for outstanding: actualInFlight={0} pendingFlows={1} inFlightPubRels={2} tokens={3}
-						log.fine(CLASS_NAME, methodName,"639", new Object[]{new Integer(actualInFlight), new Integer(pendingFlows.size()), new Integer(inFlightPubRels), new Integer(tokc)});
+						log.fine(CLASS_NAME, methodName,"639", new Object[]{ Integer.valueOf(actualInFlight),  Integer.valueOf(pendingFlows.size()),  Integer.valueOf(inFlightPubRels),  Integer.valueOf(tokc)});
 
 						// wait for outstanding in flight messages to complete and
 						// any pending flows to complete
@@ -1324,20 +1376,20 @@ public class ClientState {
 		final String methodName = "deliveryComplete";
 
 		//@TRACE 641=remove publish from persistence. key={0}
-		log.fine(CLASS_NAME,methodName,"641", new Object[]{new Integer(message.getMessageId())});
+		log.fine(CLASS_NAME,methodName,"641", new Object[]{ Integer.valueOf(message.getMessageId())});
 		
 		persistence.remove(getReceivedPersistenceKey(message));
-		inboundQoS2.remove(new Integer(message.getMessageId()));
+		inboundQoS2.remove( Integer.valueOf(message.getMessageId()));
 	}
 	
 	protected void deliveryComplete(int messageId) throws MqttPersistenceException {
 		final String methodName = "deliveryComplete";
 
 		//@TRACE 641=remove publish from persistence. key={0}
-		log.fine(CLASS_NAME,methodName,"641", new Object[]{new Integer(messageId)});
+		log.fine(CLASS_NAME,methodName,"641", new Object[]{ Integer.valueOf(messageId)});
 		
 		persistence.remove(getReceivedPersistenceKey(messageId));
-		inboundQoS2.remove(new Integer(messageId));
+		inboundQoS2.remove( Integer.valueOf(messageId));
 	}
 	
 	public int getActualInFlight(){
@@ -1383,14 +1435,14 @@ public class ClientState {
 		props.put("In use msgids", inUseMsgIds);
 		props.put("pendingMessages", pendingMessages);
 		props.put("pendingFlows", pendingFlows);
-		props.put("maxInflight", new Integer(maxInflight));
-		props.put("nextMsgID", new Integer(nextMsgId));
-		props.put("actualInFlight", new Integer(actualInFlight));
-		props.put("inFlightPubRels", new Integer(inFlightPubRels));
+		props.put("maxInflight",  Integer.valueOf(maxInflight));
+		props.put("nextMsgID",  Integer.valueOf(nextMsgId));
+		props.put("actualInFlight",  Integer.valueOf(actualInFlight));
+		props.put("inFlightPubRels",  Integer.valueOf(inFlightPubRels));
 		props.put("quiescing", Boolean.valueOf(quiescing));
-		props.put("pingoutstanding", new Integer(pingOutstanding));
-		props.put("lastOutboundActivity", new Long(lastOutboundActivity));
-		props.put("lastInboundActivity", new Long(lastInboundActivity));
+		props.put("pingoutstanding",  Integer.valueOf(pingOutstanding));
+		props.put("lastOutboundActivity",  Long.valueOf(lastOutboundActivity));
+		props.put("lastInboundActivity",  Long.valueOf(lastInboundActivity));
 		props.put("outboundQoS2", outboundQoS2);
 		props.put("outboundQoS1", outboundQoS1);
 		props.put("outboundQoS0", outboundQoS0);
